k8s/spark-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-popular-app
  labels:
    app: spark-popular-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-popular-app
  template:
    metadata:
      labels:
        app: spark-popular-app
    spec:
      containers:
        - name: spark-popular-app
          image: spark-popular-app:latest
          # Mount the volume that has been populated by the init container
          volumeMounts:
            - name: hadoop-conf-volume
              mountPath: /hadoop-config
      volumes:
        - name: hadoop-conf-volume
          configMap:
            name: spark-popular-app-hadoop-conf
