k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: my-mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-mysql
  template:
    metadata:
      labels:
        app: my-mysql
    spec:
      # Mount the configmap volume
      # This is an excerpt of deployment.spec.template.spec
      volumes:
        - name: init-volume
          configMap:
            name: mysql-deployment-init-configmap
      containers:
        - name: my-mysql
          image: mysql
          volumeMounts:
            - name: init-volume
              mountPath: /docker-entrypoint-initdb.d/
          # Set required environment variables to initialize the container
          ports:
            - containerPort: 33060
            - containerPort: 3306

---
#Begin: Service
apiVersion: v1
kind: Service
metadata:
  name: my-app-mysql-service
spec:
  selector:
    app: my-mysql
  ports:
    - name: mysql-xproto
      protocol: TCP
      port: 33060
      targetPort: 33060
    - name: mysql-standard
      protocol: TCP
      port: 3306
      targetPort: 3306
#End: Service
