k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-platform-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /(orders)/?(.*)
            pathType: Prefix
            backend:
              service:
                name: web-app-service
                port:
                  number: 5000
          - path: /(simulator)/?(.*)
            pathType: Prefix
            backend:
              service:
                name: datagenerator-app-service
                port:
                  number: 3000
